examples/pos/matchconstant.effekt
module matchconstant

def foo(n: Int) = n match {
    case 1 => 2
    case 2 => 3
    case _ => 42
}

def bar(s: String) = s match {
    case "hello" => "world"
    case other => other
}

def main() = {
    println(foo(1));
    println(foo(2));
    println(foo(3));
    println(bar("hello"));
    println(bar("foo"))
}