examples/neg/match_nested.effekt
module nested

type Exp {
  Lit(n: Int)
  Add(l: Exp, r: Exp)
  Mul(l: Exp, r: Exp)
}

def test(l: Exp) = l match {
  case Add(Lit(n), r) => 0
  case Add(Mul(_, Add(_, _)), r) => 1
  // case Add(Mul(_, Mul(_, _)), r) => 2
  case Add(Mul(_, Lit(_)), r) => 3
  case Add(Add(_, _), _) => 4
  case Mul(_, _) => 5
  case Lit(_) => 6
}

def main() = ()